<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobilinkd TNC</string>
    <string name="action_bluetooth_settings">Bluetooth Settings</string>
    <string name="action_update_firmware">Update Firmware</string>
    <string name="action_about">About</string>
    <string name="output_volume_label">Output Volume</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="input_volume_label">Input Volume</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled. Exiting.</string>
    <string name="msg_bt_not_connected">Bluetooth not connected.</string>
    <string name="title_connecting">Connecting&#8230;</string>
    <string name="title_connected_to">Connected to: </string>
    <string name="title_not_connected">Not connected</string>
    <string name="label_firmware_version">Firmware Version: </string>

    <!-- DeviceListActivity -->
    <string name="none_paired">No devices have been paired</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="ptt_button">PTT</string>
    <string name="title_activity_device_list">Choose Bluetooth Device</string>
    <string name="label_tx_delay">TX Delay</string>
    <string name="label_tx_delay_hint">Preamble time (in 10ms increments)</string>
    <string name="label_persistence">Persistence</string>
    <string name="label_persistence_hint">P-persistent probability (n/255)</string>
    <string name="label_slot_time">Slot Time</string>
    <string name="label_slot_time_hint">CSMA wait (in 10ms increcments)</string>
    <string name="label_tx_tail">TX Tail</string>
    <string name="label_tx_tail_hint">Ignored (always set to 2)</string>
    <string name="duplex_button">Duplex</string>
    <string name="label_10ms">x 10ms</string>
    <string name="label_kiss_parameters">KISS Parameters</string>
    <string name="label_0_255">0&#8211;255</string>

    <string name="label_modem_type">Modem Type</string>
    <string name="label_passall">Passall</string>
    <string name="label_passall_hint">Pass packets with an invalid CRC.</string>
    <string name="label_dcd">DCD</string>
    <string name="label_dcd_hint">Enable DCD when using an open squelch</string>
    <string name="label_conn_track">BT Connection Tracking</string>
    <string name="label_conn_track_hint">Enable when TNC is used for digipeating</string>
    <string name="label_verbose">Verbose Output</string>
    <string name="label_verbose_hint">Enable only when troubleshooting</string>
    <string name="modem_1200_afsk">1200 baud AFSK</string>
    <string name="modem_300_afsk">300 baud AFSK</string>
    <string name="modem_9600_fsk">9600 baud G3RUH/GMSK</string>
    <string name="modem_M17">M17 4-FSK</string>
    <string name="modem_unknown">unknown modem type</string>
    <string name="label_rxReversePolarity">RX Reverse Polarity</string>
    <string name="label_rxReversePolarityHint">Reverse polarity for received 4-FSK symbols.  Normally Off.  Only affects 4-FSK modes.</string>
    <string name="label_txReversePolarity">TX Reverse Polarity</string>
    <string name="label_txReversePolarityHint">Reverse polarity for transmitted 4-FSK symbols.  Normally Off.  Only affects 4-FSK modes.</string>

    <string name="audio_output_settings">Audio Output Settings&#8230;</string>
    <string name="label_audio_output_settings"><font color='white'>Audio Output Settings</font></string>
    <string name="label_ptt_style">PTT Style</string>
    <string name="label_ptt_style_simplex">Simplex</string>
    <string name="label_ptt_style_multiplex">Multiplex</string>
    <string name="label_ptt_icon">PTT Style Help</string>
    <string name="label_ptt_hint">Select whether the radio has a dedicated PTT
        signal (Simplex) or multiplexes the PTT signal on Mic+ (Multiplex).
        Kenwood HTs (and all Chinese HTs that use the same connector) and
        MiniDIN-6 data ports use Simplex.  Most other HTs use Multiplex.</string>

    <string name="output_twist_label">Output Twist</string>
    <string name="output_twist_default">50</string>
    <string name="output_twist_min">0</string>
    <string name="output_twist_max">100</string>
    <string name="output_twist_help_title">Output Twist Help</string>
    <string name="output_twist_help">
        Changing the output twist changes the relative amplitude of MARK and SPACE tones.  50 is
        even (which is the default).  Values less than 50 decrease the 2200Hz SPACE tone.  Values
        greater than 50 decrease the 1200Hz MARK tone.  This can be used to compensate for lack of
        pre-emphasis in the transmitter, or when the pre-emphasis is not a flat 6dB per octave.
    </string>
    
    <string name="label_audio_output_tone">Output Tone</string>
    <string name="mark_button">1200Hz</string>
    <string name="space_button">2200Hz</string>
    <string name="both_button">Both</string>
    <string name="label_transmit_button">Transmit</string>
    <string name="label_audio_output_min">0</string>
    <string name="label_audio_output_max">255</string>
    
    <string name="audio_input_settings">Audio Input Settings&#8230;</string>
    <string name="label_audio_input_settings"><font color='white'>Audio Input Settings</font></string>
    <string name="label_input_volume_level">Input Volume Level</string>
    <string name="label_audio_input_hint">Open squelch and set radio volume to flicker right-most red element.</string>
    <string name="label_input_atten">Attenuate Input</string>
    <string name="label_input_atten_hint">Disable only if the fixed volume level is too low.</string>
    
    <string name="title_activity_firmware_update">Mobilinkd Firmware Update</string>
    <string name="title_activity_about">About</string>
    <string name="about_close_button">Close</string>
    <string name="about_content">
        Mobilinkd TNC Configuration Utility\n
        For Mobilinkd TNC1, TNC2, TNC3 and TNC4 devices\n
        Version 1.4.7 &#8211; 2025-11-24\n\n
        Copyright &#169; 2013-2025 Mobilinkd LLC.\n
        Port Orchard, WA, USA\n\n
        This software is released under the Apache Software License 2.0\n\n
        https://github.com/mobilinkd/tnc1-android-config
    </string>
    <string name="input_atten_button">Atten</string>
    <string name="output_volume_default">128</string>
    <string name="firmware_update">Firmware Update\n</string>
    <string name="firmware_upload_notification">
        You have selected a Mobilinkd firmware image.\n\nWould you
        like to upload this file to your Mobilinkd TNC?\n\n
        This will not work with a TNC3 or TNC4.
    </string>
    <string name="select_device_notification">
        You will next be asked to select a Bluetooth device.
        Choose the one labeled "Mobilinkd TNC1" or "Mobilinkd TNC2".
    </string>
    <string name="firmware_upload_warning">
        You are about to upload new firmware to the TNC.  This may
        take a few minutes to complete.  If you
        navigate away from the screen while the firmware upload and
        verification is in progress, the TNC firmware will be erased.\n\n
        Are you sure you wish to continue?
    </string>
    
    <string name="reading_firmware">Reading firmware&#8230;</string>
    <string name="initializing_firmware">Initializing&#8230;</string>
    <string name="writing_firmware">Writing firmware&#8230;</string>
    <string name="verifying_firmware">Verifying firmware&#8230;</string>
    
    <string name="firmware_url">http://www.mobilinkd.com/downloads/?dl_cat=4</string>
    
    <string name="connect_ellipsis_button">Connect&#8230;</string>
    <string name="configure_label">Configure</string>
    <string name="power_settings">Power Settings&#8230;</string>
    <string name="audio_settings">Audio Settings&#8230;</string>
    <string name="modem_settings">Modem Settings&#8230;</string>
    <string name="kiss_settings">KISS Parameters&#8230;</string>
    <string name="save_settings">Save Settings&#8230;</string>
    <string name="device_information">Device Information&#8230;</string>
    <string name="firmware_settings">Firmware&#8230;</string>

    <string name="audio_input_title"><font color='white'>Audio Input Settings</font></string>
    <string name="audio_output_title"><font color='white'>Audio Output Settings</font></string>
    <string name="power_settings_title"><font color='white'>Power Settings</font></string>
    <string name="kiss_parameters_title"><font color='white'>KISS Parameters</font></string>
    <string name="modem_settings_title"><font color='white'>Modem Settings</font></string>


    <string name="battery_level">Battery Level</string>
    <string name="power_on_usb">Power on with USB Power</string>
    <string name="power_off_usb">Power off with USB Power</string>

    <string name="input_volume_level">Input Volume Level</string>
    <string name="input_gain_label">Input Gain Level</string>
    <string name="input_gain_min">0</string>
    <string name="input_gain_level">0</string>
    <string name="input_gain_max">5</string>
    <string name="label_input_gain_icon">Input Gain Help</string>
    <string name="label_input_gain_hint">Select the audio input gain to maximize the dynamic
        range.  Increase the input gain if the audio levels from the radio are not high enough
        to acheive the desired levels.  Best results are acheived when the last element in the
        volume bar above is intermittently lit.</string>
    <string name="input_twist_label">Input Twist Level</string>
    <string name="input_twist_min">-3dB</string>
    <string name="input_twist_level">6dB</string>
    <string name="input_twist_max">9dB</string>
    <string name="label_input_adjust_button">Auto-Adjust</string>
    <string name="label_input_twist_icon">Input Twist Help</string>
    <string name="label_input_twist_hint">Select the RX twist expected by the receiver.  This is
        typically 0dB without de-emphasis and 6dB with de-emphasis.  The normal setting for
        1200 baud is 6dB.</string>
    <string name="input_twist_db">%ddB</string>

    <string name="kiss_parameters_label">KISS Parameters</string>
    <string name="full_duplex_setting">Full DUplex (normally off)</string>
    
    <string name="ok">OK</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="msg_connection_lost">Device connection was lost</string>
    <string name="msg_unable_to_connect">Unable to connect device</string>
    <string name="msg_not_paired">Pair to TNC in Bluetooth Settings</string>
    <string name="msg_no_connect_permission">Permission is needed to connect to Bluetooth devices.</string>
    <string name="msg_connected_to">Connected to</string>
    <string name="msg_bluetooth_not_present">Bluetooth is not available on this device</string>
    <string name="battery_level_mv">%04dmV</string>
    <string name="label_modem_hint">Select modem type</string>

    <string name="device_information_title"><font color='white'>Device Information</font></string>
    <string name="label_hwVersion">Hardware Version</string>
    <string name="label_fwVersion">Firmware Version</string>
    <string name="label_macAddress">MAC Address</string>
    <string name="label_serialNumber">Serial Number</string>
    <string name="label_dateTime">Date/Time</string>
    <string name="unknown">Unknown</string>

</resources>
