<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/toggleButtonConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/connect_button"
            android:textOff="@string/connect_button"
            android:textOn="@string/disconnect_button"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/bluetooth_device_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
	        android:paddingLeft="12dp"
	        android:paddingRight="12dp"
            android:paddingBottom="6dp"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:text="@string/title_not_connected"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <FrameLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="6dp" >
            
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/label_firmware_version"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/firmware_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        </FrameLayout>
        <Button
            android:id="@+id/audioOutputButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/perm_group_audio_settings"
            android:drawableStart="@drawable/perm_group_audio_settings"
            android:enabled="false"
            android:gravity="center_vertical|center_horizontal|start"
            android:text="@string/audio_output_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Button
            android:id="@+id/audioInputButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_voice_search"
            android:drawableStart="@drawable/ic_voice_search"
            android:enabled="false"
            android:gravity="center_vertical|center_horizontal|start"
            android:text="@string/audio_input_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
	    <Button
	        android:id="@+id/powerButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/perm_group_affects_battery"
	        android:drawableStart="@drawable/perm_group_affects_battery"
	        android:enabled="false"
	        android:gravity="center_vertical|center_horizontal|start"
	        android:text="@string/power_settings"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/kissButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/perm_group_network"
            android:drawableStart="@drawable/perm_group_network"
            android:enabled="false"
            android:gravity="center_vertical|center_horizontal|start"
            android:text="@string/kiss_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

	    <Button
	        android:id="@+id/modemButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/perm_group_system_tools"
	        android:drawableStart="@drawable/perm_group_system_tools"
	        android:enabled="false"
	        android:gravity="center_vertical|center_horizontal|start"
	        android:text="@string/modem_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

		<Button
			android:id="@+id/infoButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawableStart="@android:drawable/ic_menu_info_details"
			android:drawableLeft="@android:drawable/ic_menu_info_details"
			android:enabled="false"
			android:gravity="center_vertical|center_horizontal|start"
			android:text="@string/device_information"
			android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/perm_group_sync_settings"
            android:drawableStart="@drawable/perm_group_sync_settings"
            android:enabled="false"
            android:visibility="invisible"
            android:gravity="center_vertical|center_horizontal|start"
            android:text="@string/save_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

	    </LinearLayout>

</ScrollView>