<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="#0099cc" >

    <LinearLayout
        android:id="@+id/txDelayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" 
        android:clickable="true" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center_vertical|start"
	            android:text="@string/label_tx_delay"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/txDelayText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="0"
	            android:layout_gravity="end"
	            android:ems="3"
	            android:gravity="center_vertical|end"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_tx_delay_hint"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/persistenceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" 
        android:clickable="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:text="@string/label_persistence"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/persistenceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0"
                android:ems="3"
                android:gravity="center_vertical|end"
                android:maxEms="3"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_persistence_hint"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </LinearLayout>

    
    <LinearLayout
        android:id="@+id/slotTimeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp" 
        android:clickable="true" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_gravity="center_vertical|start"
	            android:text="@string/label_slot_time"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/slotTimeText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="end"
	            android:layout_weight="0"
	            android:ems="3"
	            android:gravity="center_vertical|end"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </LinearLayout>
	
	    <TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_slot_time_hint"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:clickable="false" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/label_tx_tail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txTailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0"
            android:text="2"
            android:ems="3"
            android:gravity="center_vertical|end"
            android:maxEms="3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:enabled="false"
        android:text="@string/label_tx_tail_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <CheckedTextView
        android:id="@+id/duplexCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/full_duplex_setting"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</LinearLayout>
